--- a/src/Game/Airplane/Object/Flyer.module.scss
+++ b/src/Game/Airplane/Object/Flyer.module.scss
@@ -2,8 +2,8 @@
     position:absolute;
     //bottom:5%;
     left:40%;
-    width:150px;
-    height:auto;
+    width:auto;
+    height:15vh;
     img {
         height:100%;
         width:100%;
