--- a/src/Game/Airplane/World/Sky.module.css
+++ b/src/Game/Airplane/World/Sky.module.css
@@ -1,4 +1,14 @@
 .sky {
     background-color: rgb(24, 127, 224);
+    background: rgb(10,83,176);
+    background: linear-gradient(180deg, rgba(10,83,176,1) 0%, rgba(29,119,186,1) 50%, rgba(60,166,255,1) 100%);
     height: 100%;
+}
+
+.grass {
+    background-color: rgb(16, 194, 0);
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height: 10%;
 }
