--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@import 'scss/vars';
+@import 'scss/typo';
+@import 'scss/header';
+@import 'scss/game';
+
 body {
     background-color: #282c34;
   }
@@ -6,36 +11,6 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-  }
-  
-  .App-header {
-    font-size: calc(10px + 2vmin);
-    height:25vmin;
-    color: white;
-    h1 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-  }
-  
-  .App-logo {
-    height: 15vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
   }
   
   .App-link {
